6.2_ingress_lab_with-domain_routing/app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
        - name: app2
          image: hashicorp/http-echo
          args:
            - "-text=Hello from APP2"

          ports:
            - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ingress-lab
spec:
  selector:
    app: app2

  ports:
    - port: 80
      targetPort: 5678
